# metadata_agent

./: .data-required  .dockerignore  .gitignore  Caddyfile  Dockerfile  LICENSE  demo_app.py  deploy.sh  docker-compose.yml  makefile  nginx.metadata-demo.conf  pyproject.toml  readme.md  requirements.txt  run_planner.py  run_test.py
.github/workflows/: ci-uv.yml  ci.yml
.streamlit/: config.toml
demo/: README.md
demo/pages/: __init__.py  metadata_generation.py
demo/workflows/: __init__.py  metadata_generation.py
docs/: README.md  architecture.md  conf.py  demo.md  examples.md  index.md  tutorial.md
examples/: README.md  completion.py  config.py  connection.py  generation.py  weave_tracking.py
notebooks/: test_csv_datasource.ipynb  test_orchestrator.ipynb  test_steps.ipynb  test_structured_output.ipynb  test_surf.ipynb
notebooks/legacy/: test_anything.ipynb
scratch/: README.md  generation.py
src/: __init__.py  config.py  main.py  standards.py  topology.py
src/context/: context_classifier.py  context_factory.py  csv_context.py  registry.py  sqlite_context.py
src/core/: __init__.py  constants.py  schemas.py  state.py
src/datasource/: __init__.py  base.py  csv_source.py  factory.py  sqlite_source.py
src/orchestrator/: __init__.py  nodes.py  orchestrator.py  plan_executor.py  prompts.py  schemas.py  state.py  step_executor.py  utils.py
src/players/: __init__.py  configs.py  player.py
src/standards/: __init__.py  croissant.py  schema_builder.py  standards.py
src/tools/: __init__.py  context_tools.py  datasource_tools.py  pandas_tools.py
src/tui/: README.md  __init__.py  app.py  clipboard.py  metadata_renderer.py  palette.py  plan_renderer.py  (+2 more)
tests/: test_orchestrator_utils.py  test_spatial_tuple_tools.py
