[project]
name = "metadata-agent"
version = "0.1.0"
description = "An agentic generative (LLM-based) tool for extracting metadata from datasets."
readme = "readme.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "langchain>=1.2.15",
    "langchain-google-genai>=4.2.2",
    "langchain-openai>=1.2.0",
    "langgraph>=1.1.9",
    "myst-parser>=3.0.1",
    "pandas>=2.2,<3",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.11",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"

include = [
  "demo/**/*.py",
  "scratch/**/*.py",
  "tests/**/*.py",
]

exclude = [
  ".git",
  ".venv",
  "notebooks",
]

[dependency-groups]
demo = [
    "streamlit>=1.57.0",
]
docs = [
    "myst-parser>=2,<4",
    "pydata-sphinx-theme>=0.15,<0.17",
    "sphinx>=7.2,<8",
    "sphinx-autoapi>=3.0,<4",
    "sphinx-copybutton>=0.5,<0.6",
]

